fix some mistake

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
             {%- endif -%}
           {%- endfor -%}
           {%- if site.notebook_url -%}
-          <a class="page-link" href="{{site.notebook_url}}"">Notebook</a>
+          <a class="page-link" href="{{site.notebook_url}}">Notebook</a>
           {%- endif -%}
         </div>
       </nav>
